made updates to the documentation

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -651,7 +651,7 @@
                       <code>th</code>
                     </td>
                     <td>
-                      The deafult role for a <code>th[scope="col"]</code> element is columnheader.
+                      The default role for a <code>th[scope="col"]</code> element is columnheader.
                     </td>
                   </tr>
                   <tr>
@@ -708,7 +708,7 @@
                     <td>
                       <ul>
                         <li>Identifies the currently selected date in the textbox.</li>
-                        <li>All other dates do not have have an <code>aria-selected</code> attribute.</li>
+                        <li>The <code>aria-selected</code> attribute is only set on the button representing the date in the textbox, all other buttons do not have an <code>aria-selected</code> attribute.</li>
                       </ul>
                     </td>
                   </tr>
