made updates to the documentation

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -165,7 +165,7 @@
     </section>
 
     <section>
-      <h3 id="kbd_label_2">Button (Calendar Icon)</h3>
+      <h3 id="kbd_label_2">Button (Open Date Picker)</h3>
       <table aria-labelledby="kbd_label_2" class="def">
         <thead>
           <tr>
@@ -244,7 +244,7 @@
     </section>
 
     <section>
-      <h3 id="kbd_label_5">Grid (Days in a Month)</h3>
+      <h3 id="kbd_label_5">Grid (Days in Month)</h3>
       <table aria-labelledby="kbd_label_5" class="def">
         <thead>
           <tr>
@@ -590,7 +590,7 @@
         </section>
 
         <section>
-            <h3 id="rps_label_5">Grid (Dates of a Month)</h3>
+            <h3 id="rps_label_5">Grid (Days in Month)</h3>
             <table aria-labelledby="rps_label_5" class="data attributes">
               <thead>
                 <tr>
