made updated code

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -122,7 +122,7 @@
               </tr>
             </thead>
 
-            <tbody class="curr">
+            <tbody>
             </tbody>
           </table>
 
