Appendices Section: Add sub section for indexes

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4754,6 +4754,14 @@
 
   <section id="appendices" class="appendix">
     <h2>Appendices</h2>
+    
+    <section id="indexes">
+      <h3>Indexes</h3>
+      <ul>
+        <li><a href="examples/#examples_by_role_label">Design Pattern Examples by Role</a></li>
+        <li><a href="examples/#examples_by_props_label">Design Pattern Examples by Properties and States</a> </li>
+      </ul>
+    </section>
 
     <section id="change_log" class="appendix">
       <h3>Change History</h3>
