--- a/examples/index.html
+++ b/examples/index.html
@@ -11,12 +11,18 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <nav aria-label="Top link to ARIA Practices">
+  <nav aria-label="ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 
   <main>
     <h1>Index of ARIA Design Pattern Examples</h1>
+    
+    <p>
+      This page includes the following indexes of example implementations of 
+      <a href="../#aria_ex">ARIA design patterns</a> included in the 
+      <a href="../">WAI-ARIA Authoring Practices 1.1.</a>
+    </p>
 
     <ul>
       <li><a href="#examples_by_role_label">Examples by Role</a></li>
@@ -72,8 +78,8 @@
 </tr><tr>
   <td><code>grid</code></td>
   <td>    <ul>      <li><a href="../examples//combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>gridcell</code></td>
   <td>    <a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></td>
@@ -199,6 +205,7 @@
       <li><a href="../examples//treeview/treeview-2/treeview-2a.html">Navigation Treeview  Using Computed Properties </a></li>
       <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li></ul></td>
 </tr>
+
         </tbody>
       </table>
 
@@ -317,8 +324,8 @@
       <li><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></li>
       <li><a href="../examples//dialog-modal/dialog.html">Modal Dialog  </a></li>
       <li><a href="../examples//feed/feed.html">Feed  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//listbox/listbox-collapsible.html">Collapsible Dropdown Listbox  </a></li>
       <li><a href="../examples//listbox/listbox-rearrangeable.html"> Listboxes with Rearrangeable Options </a></li>
       <li><a href="../examples//listbox/listbox-scrollable.html">Scrollable Listbox  </a></li>
@@ -346,8 +353,8 @@
       <li><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></li>
       <li><a href="../examples//dialog-modal/dialog.html">Modal Dialog  </a></li>
       <li><a href="../examples//feed/feed.html">Feed  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//listbox/listbox-collapsible.html">Collapsible Dropdown Listbox  </a></li>
       <li><a href="../examples//listbox/listbox-rearrangeable.html"> Listboxes with Rearrangeable Options </a></li>
       <li><a href="../examples//listbox/listbox-scrollable.html">Scrollable Listbox  </a></li>
@@ -405,12 +412,12 @@
   <td><a href="../examples//button/button.html">Button  </a></td>
 </tr><tr>
   <td><code>aria-rowcount</code></td>
-  <td>    <ul>      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+  <td>    <ul>      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-rowindex</code></td>
-  <td>    <ul>      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+  <td>    <ul>      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-selected</code></td>
   <td>    <ul>      <li><a href="../examples//combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup  </a></li>
@@ -445,13 +452,14 @@
   <td><code>aria-valuetext</code></td>
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
       <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
-</tr>        </tbody>
+</tr>
+        </tbody>
       </table>
 
     </section>
 
   </main>
-  <nav aria-label="Bottom link to ARIA Practices">
+  <nav aria-label="ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
