--- a/aria-practices.html
+++ b/aria-practices.html
@@ -497,9 +497,9 @@
       </p>
       <p>Features needed to provide sufficient rotation control include:</p>
       <ol>
-        <li>Rotation pauses when keyboard focus enters the carousel.</li>
-        <li>Rotation pauses when the mouse hovers over the carousel.</li>
-        <li>A button for pausing and restarting rotation. This is particularly important for supporting assistive technologies operating in a mode that does not move either keyboard focus or the mouse.</li>
+        <li>Rotation stops when keyboard focus enters the carousel. It does not restart unless the user explicitly requests it to do so.</li>
+        <li>Rotation is stopped whenever the mouse is hovering over the carousel.</li>
+        <li>A button for stopping and restarting rotation. This is particularly important for supporting assistive technologies operating in a mode that does not move either keyboard focus or the mouse.</li>
         <li>Buttons for displaying the previous and next slides.</li>
         <li>Optionally, a control, or group of controls, for choosing a specific slide to display. For example, the selection controls can be marked up as tabs in a tablist with the slide represented by a tabpanel element.</li>
       </ol>
@@ -514,38 +514,15 @@
 
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
-
-        <p>Moving keyboard focus to any interactive element immediately stops slide rotation.  Automated slide rotation should not resume unless explicitly requested by the user (e.g. through an optional resume rotation button)</p>
-
-        <p>For the pause, previous and next buttons:</p>
         <ul>
           <li>
-            <kbd>Tab</kbd>: The tab sequence begins with the pause button, next the previous slide button, then to interactive content in the slide and then to the next slide button.
+            Automatic slide rotation stops when any element in the carousel receives keyboard focus.
+            It does not resume unless the user activates the control for starting and stopping rotation.
           </li>
-          <li>
-            <kbd>Enter or Space</kbd>: Activates the previous or next button rotating in new slide content or pauses the rotation of the slides.
-          </li>
+          <li><kbd>Tab</kbd> and <kbd>Shift + Tab</kbd>: Move focus through the carousel as specified by the page tab sequence; no special scripting is necessary.</li>
+          <li>Button elements implement the keyboard interaction defined in the <a href="#button">button pattern</a>.</li>
+          <li>If tabs are used for slide selection, they implement the keyboard interaction defined in the <a href="#tabpanel">Tabs Pattern.</a></li>
         </ul>
-        <p>
-
-        <p>For the optional <code>tablist</code>:</p>
-        <ul>
-          <li>
-            <kbd>Tab</kbd>: The tab sequence begins with the pause button, next the tablist, the interactive slide content, previous slide button, and then to the next slide button.  Keyboard focus moves to the <code>tab</code> element representing the current slide.
-            When the tablist has keyboard focus, moves focus to the interactive slide content.
-          </li>
-          <li>
-            <kbd>Left Arrow</kbd>: moves focus to the previous tab (i.e. slide).
-            If focus is on the first tab, moves focus to the last tab.
-          </li>
-          <li>
-            <kbd>Right Arrow</kbd>: Moves focus to the next tab (i.e. slide).
-            If focus is on the last tab element, moves focus to the first tab.
-          </li>
-          <li><kbd>Home</kbd> (Optional): Moves focus to the first tab (i.e. slide).</li>
-          <li><kbd>End</kbd> (Optional): Moves focus to the last tab (i.e. slide).</li>
-        </ul>
-        <p>
       </section>
 
       <section class="notoc">
