--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -92,7 +92,7 @@
             <span id="id-dialog-label"
                   class="monthYear"
                   role="status">
-
+              December 2018
             </span>
 
             <button class="nextMonth"
@@ -125,6 +125,60 @@
             </thead>
 
             <tbody>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>25</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>26</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>27</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>28</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>29</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>30</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">1</button></td>
+              </tr>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">2</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">3</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">4</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">5</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">6</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">7</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">8</button></td>
+              </tr>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">9</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">10</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">11</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">12</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">13</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="0">14</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">15</button></td>
+              </tr>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">16</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">17</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">18</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">19</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">20</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">21</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">22</button></td>
+              </tr>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">23</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">24</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">25</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">26</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">27</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">28</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">29</button></td>
+              </tr>
+              <tr>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">30</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1">31</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>1</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>2</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>3</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>4</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>5</button></td>
+              </tr>
             </tbody>
           </table>
 
