added issue that this example is tracked

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -37,7 +37,10 @@
           For additional guidance, see <a href="../../../#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
       </p>
 
-
+        <p>
+          Development of this example for the carousel pattern is tracked by
+          <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
+        </p>
 
       <section>
         <h2 id="ex_label">Example</h2>
