added issue that this example is tracked

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -30,6 +30,10 @@
     </nav>
     <main>
       <h1>Example of Image Carousel with Automatically Rotating Images</h1>
+        <p>
+          Comments on this example are tracked in
+          <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
+        </p>
       <p>
           This example section demonstrates a <a href="../../../#carousel">design pattern for a image carousel</a> consisting of a pause button, next and previous slide buttons.
           In this example, when the page is loaded the carousel images start rotating automatically.
@@ -37,10 +41,6 @@
           For additional guidance, see <a href="../../../#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
       </p>
 
-        <p>
-          Development of this example for the carousel pattern is tracked by
-          <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
-        </p>
 
       <section>
         <h2 id="ex_label">Example</h2>
