added issue that this example is tracked

--- a/examples/carousel/carousel-2/carousel-2.html
+++ b/examples/carousel/carousel-2/carousel-2.html
@@ -31,7 +31,11 @@
 
     <main>
       <h1>Example of Image Carousel with Automatically Rotating Images using Tablist</h1>
-      <p>
+        <p>
+          Comments on this example are tracked in
+          <a href="https://github.com/w3c/aria-practices/issues/955">issue 955.</a>
+        </p>
+        <p>
           This example section demonstrates a <a href="../../../#carousel">design pattern for a image carousel</a> consisting of a pause button, next and previous slide buttons and a the use of <a href="../../../#tab">tabs</a> to navigate the list of carousel items.
           In this example, when the page is loaded the carousel images start rotating automatically.
           The auto rotation can be stopped by pressing the pause button, just moving keyboard focus to any control or link in the carousel or hovering over the image with a mouse.  There are two ways for the user to restart rotation, pressing the pause button again or moving the pointer outside the carousel image area.
