Add slide show to section title

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -479,7 +479,7 @@
     </section>
     
     <section class="widget" id="carousel">
-      <h3>Carousel (Image or Slide Rotator)</h3>
+      <h3>Carousel (Slide Show or Image Rotator)</h3>
       <p class="ednote">
         This is a draft pattern that is being actively revised.
         Please provide feedback in
