Add guidance about rotation control position per feedback from @jongund in issue #43.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -541,6 +541,7 @@
             Button elements implement the keyboard interaction defined in the <a href="#button">button pattern</a>.
             Note: Activating the rotation control, next slide, and previous slide do not move focus, so users may easily repetitively activate them as many times as desired.
           </li>
+          <li>If present, the rotation control is the first element in the <kbd>Tab</kbd> sequence inside the carousel. It is essential that it precede the rotating content so it can be easily located.</li>
           <li>If tab elements are used for slide picker controls, they implement the keyboard interaction defined in the <a href="#tabpanel">Tabs Pattern.</a></li>
         </ul>
       </section>
