--- a/aria-practices.html
+++ b/aria-practices.html
@@ -12,7 +12,7 @@
 <body>
   <section id="abstract">
     <p>
-      This document provides readers with an understanding of how to use <cite><a href="https://www.w3.org/TR/wai-aria-1.2/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a></cite> [[WAI-ARIA]] to create accessible rich internet applications.
+      This document provides readers with an understanding of how to use <cite><a href="https://www.w3.org/TR/wai-aria-1.2/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.2</a></cite> [[WAI-ARIA-1.2]] to create accessible rich internet applications.
       It describes considerations that might not be evident to most authors from the WAI-ARIA specification alone and recommends approaches to make widgets, navigation, and behaviors accessible using WAI-ARIA roles, states, and properties.
       This document is directed primarily to Web application developers, but the guidance is also useful for user agent and assistive technology developers.
     </p>
@@ -21,13 +21,13 @@
 
   <section id="sotd">
     <p>
-      This is an editor's draft by the
+    	This is a <a href="https://www.w3.org/2018/Process-20180201/#RecsWD">Working Draft</a> by the
       <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
       of the
       <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
       It supports the
-      <a href="" class="specref">WAI-ARIA 1.2</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>]
-      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
+      <a href="" class="specref">WAI-ARIA 1.2</a> [[WAI-ARIA-1.2]]
+      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version provides authoring guidance for <a href="#changelog" class="specref">new and changed ARIA 1.2 features</a>.
     </p>
     <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.2. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
     <p>
@@ -56,7 +56,7 @@
     <p>This section is <em>informative.</em></p>
     <p>
       WAI-ARIA Authoring Practices is a guide for understanding how to use
-      <cite><a href="https://www.w3.org/TR/wai-aria-1.2/">WAI-ARIA 1.2</a></cite> to create an accessible Rich Internet Application.
+      <cite><a href="https://www.w3.org/TR/wai-aria-1.2/">WAI-ARIA 1.2</a></cite> [[WAI-ARIA-1.2]] to create an accessible Rich Internet Application.
       It provides guidance on the appropriate application of WAI-ARIA, describes recommended WAI-ARIA usage patterns, and explains concepts behind them.
     </p>
     <p>
@@ -4837,7 +4837,7 @@
             <a href="https://github.com/w3c/aria-practices/milestone/7">1.2 APG Working Draft 1 milestone,</a>
             which lists the GitHub issues that document discussions and reviews of changes included in the December 2017 publication.
           </li>
-          <li>Link to a github wiki page of commit history goes here.</li>
+        	<li><a href="https://github.com/w3c/aria-practices/commits/apg-1.2">Commit history of WAI-ARIA Authoring Practices 1.2</a>.</li>
         </ul>
       </section>
     </section>
